fix: support flat fhir/ directory layout for all FHIR resource lookups
Added fallback directory support for StructureDefinition, ActivityDefinition,
and Questionnaire to handle exploded JARs with flat resource paths.
Ensures validator works in both Maven and CI environments.
Updated JavaDoc for the class FhirValidator.java